Mostrar e insertar funciona