@@ -1,6 +1,9 @@
 package models;
 
 import java.util.*;
+import java.util.stream.Collectors;
+
+import org.hibernate.annotations.GenericGenerator;
 
 import jakarta.persistence.*;
 import lombok.Data;
@@ -10,27 +13,32 @@ import lombok.NoArgsConstructor;
 @NoArgsConstructor
 @Entity
 @Table(name = "hib_departamento")
+
 @NamedQueries({
-	@NamedQuery(name="Departamento.findByNombre", 
-			query="SELECT d FROM Departamento d WHERE d.nombre LIKE :nombre"),
-	@NamedQuery(name="Departamento.findByEmpleado", 
-			query="SELECT DISTINCT d FROM Empleado e JOIN e.departamento d WHERE e.id = :id")
+    @NamedQuery(name ="Departamento.findAll",
+            query="SELECT d FROM Departamento d"),
+    @NamedQuery(name="Departamento.findByNombre", 
+            query="SELECT d FROM Departamento d WHERE d.nombre LIKE :nombre"),
+    @NamedQuery(name="Departamento.findByEmpleado", 
+            query="SELECT DISTINCT d FROM Empleado e JOIN e.departamento d WHERE e.id = :id")
 })
 public class Departamento {
 
 	@Id
-	@GeneratedValue(strategy=GenerationType.IDENTITY)
-	private UUID id;
+    @GeneratedValue(generator = "uuid2")
+    @GenericGenerator(name = "uuid2", strategy = "uuid2")
+    @Column(name = "id", columnDefinition = "BINARY(16)")
+    private UUID id;
 	
 	private String nombre;
 	
-	@OneToMany(mappedBy = "departamento")
-    private Set<Empleado> empleados = new HashSet<>();
+	@OneToMany(mappedBy = "departamento", fetch = FetchType.EAGER)
+	private Set<Empleado> empleados = new HashSet<>();
 
 	public Departamento(String nombre) {
 		this.id = UUID.randomUUID();
-		this.nombre = nombre;
-		this.empleados=null;	}
+		this.nombre = nombre;	
+		}
 	
 	public Departamento(UUID id) {
 		this.id = id;
@@ -45,11 +53,11 @@ public class Departamento {
 	
 	@Override
 	public String toString() {
-		List<String> emps = empleados.stream()
-				.map(e -> e.getNombre())
-				.sorted()
-				.toList();
-		return String.format("Departamento [%-2d %-25s %s]", id, nombre, emps);
+	    List<String> emps = empleados.stream()
+	            .map(e -> e.getNombre())
+	            .sorted()
+	            .collect(Collectors.toList()); 
+	    return String.format("Departamento [%s, %s, %s]", id, nombre, emps);
 	}
 }
 
